--- a/API/templates/artistShow.html.twig
+++ b/API/templates/artistShow.html.twig
@@ -12,7 +12,7 @@
                 <div class="bg-gray-700 p-5 rounded-lg">
                     <h3 class="text-2xl text-white">{{ album.title }}</h3>
                     <p class="text-gray-400">{{ album.date|date('Y') }}</p>
-                    <a href="{{ path('album_detail', {'id': album.id}) }}" class="text-blue-500 hover:text-blue-300 mt-3 inline-block">View Album</a>
+                    <a href="{{ path('album_detail', {'artistId': album.artist.id, 'albumPos': loop.index}) }}" class="text-blue-500 hover:text-blue-300 mt-3 inline-block">View Album</a>
                 </div>
             {% else %}
                 <p class="text-gray-400">No albums available for this artist.</p>
