--- a/API/templates/artists.html.twig
+++ b/API/templates/artists.html.twig
@@ -10,7 +10,7 @@
             <div class="bg-gray-800 p-5 rounded-lg shadow-lg text-white">
                 <h2 class="text-2xl font-semibold mb-2">{{ artist.name }}</h2>
                 {# <p class="text-gray-400">{{ artist.bio|slice(0, 100) }}...</p> #}
-                <a href="{{ path('artist_detail', {'id': artist.id}) }}" class="text-blue-500 hover:text-blue-300 mt-3 inline-block">See Details</a>
+                <a href="{{ path('artist_detail', {'artistId': artist.id}) }}" class="text-blue-500 hover:text-blue-300 mt-3 inline-block">See Details</a>
             </div>
         {% else %}
             <p class="text-gray-400">No artists available.</p>
