--- a/API/templates/songs.html.twig
+++ b/API/templates/songs.html.twig
@@ -5,13 +5,33 @@
 {% block body %}
 <div class="container mx-auto py-6">
     <h1 class="text-3xl font-bold text-white mb-6">Songs</h1>
+    <form method="get" action="{{ path('songs') }}" class="mb-6">
+        <div class="flex items-center">
+            <input
+                type="text"
+                name="query"
+                placeholder="Rechercher une chanson..."
+                value="{{ criteria['title']}}"
+                class="w-full p-2 rounded-l-lg border border-gray-700 bg-gray-900 text-white"
+            />
+            <select name="genre" class="p-2 rounded-r-lg border border-gray-700 bg-gray-900 text-white">
+                <option value="">Tous les genres</option>
+                {% for genre in genres %}
+                    <option value="{{ genre }}" {% if genre == criteria['genre'] %}selected{% endif %}>{{ genre }}</option>
+                {% endfor %}
+            </select>
+            <button type="submit" class="ml-2 p-2 bg-blue-500 hover:bg-blue-400 text-white rounded-lg">Rechercher</button>
+        </div>
+    </form>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
         {% for song in songs %}
-            <div class="bg-gray-800 p-5 rounded-lg shadow-lg text-white">
-                <h2 class="text-2xl font-semibold mb-2">{{ song.title }}</h2>
-                <p class="text-gray-400">{{ song.album.artist.name }}</p>
-                <a href="{{ path('song_detail', {'artistId': song.album.artist.id, 'albumPos': albumsPos[song.album.id],'songPos': songsPos[song.id] }) }}" class="text-blue-500 hover:text-blue-300 mt-3 inline-block">Voir Details</a>
-            </div>
+            {% if (criteria['title'] in song.title) and (criteria['genre'] == '' or criteria['genre'] == song.genre) %}
+                <div class="bg-gray-800 p-5 rounded-lg shadow-lg text-white">
+                    <h2 class="text-2xl font-semibold mb-2">{{ song.title }}</h2>
+                    <p class="text-gray-400">{{ song.album.artist.name }}</p>
+                    <a href="{{ path('song_detail', {'artistId': song.album.artist.id, 'albumPos': albumsPos[song.album.id],'songPos': songsPos[song.id] }) }}" class="text-blue-500 hover:text-blue-300 mt-3 inline-block">Voir Details</a>
+                </div>
+            {% endif %}
         {% else %}
             <p class="text-gray-400">0 musiques disponible.</p>
         {% endfor %}
