JWT token + User Login + Opti API
de

j

--- a/API/templates/songShow.html.twig
+++ b/API/templates/songShow.html.twig
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="absolute flex space-x-6 transform translate-x-6 translate-y-8">
-      <div class="w-36 h-36 rounded-lg shadow-lg overflow-hidden">
+      <div class="w-36 h-36 bg-gray-700 rounded-lg shadow-lg overflow-hidden">
         {# <img src="{{ song.album.artist.profileImage }}" alt="Artist profile"> #}
       </div>
       <div class="text-white pt-12">
