--- a/API/templates/artists.html.twig
+++ b/API/templates/artists.html.twig
@@ -5,13 +5,28 @@
 {% block body %}
 <div class="container mx-auto py-6">
     <h1 class="text-3xl font-bold text-white mb-6">Artists</h1>
+    <form method="get" action="{{ path('artists') }}" class="mb-6">
+        <div class="flex items-center">
+            <input
+                type="text"
+                name="style"
+                placeholder="Rechercher par style..."
+                value="{{ criteria['style']}}"
+                class="w-full p-2 rounded-l-lg border border-gray-700 bg-gray-900 text-white"
+            />
+
+            <button type="submit" class="ml-2 p-2 bg-blue-500 hover:bg-blue-400 text-white rounded-lg">Rechercher</button>
+        </div>
+    </form>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
         {% for artist in artists %}
-            <div class="bg-gray-800 p-5 rounded-lg shadow-lg text-white">
-                <h2 class="text-2xl font-semibold mb-2">{{ artist.name }}</h2>
-                {# <p class="text-gray-400">{{ artist.bio|slice(0, 100) }}...</p> #}
-                <a href="{{ path('artist_detail', {'artistId': artist.id}) }}" class="text-blue-500 hover:text-blue-300 mt-3 inline-block">See Details</a>
-            </div>
+            {% if (criteria['style'] in artist.style) %}
+                <div class="bg-gray-700 p-5 rounded-lg shadow-lg scale-50 text-white">
+                    <h2 class="text-2xl font-semibold mb-2">{{ artist.name }}</h2>
+                    <p class="text-gray-400">{{ artist.style }}</p>
+                    <a href="{{ path('artist_detail', {'artistId': artist.id}) }}" class="text-blue-500 hover:text-blue-300 mt-3 inline-block">See Details</a>
+                </div>
+            {% endif %}
         {% else %}
             <p class="text-gray-400">No artists available.</p>
         {% endfor %}
