--- a/API/templates/login.html.twig
+++ b/API/templates/login.html.twig
@@ -5,16 +5,12 @@
 {% block body %}
 <div class="container mx-auto py-6">
     <h1 class="text-3xl font-bold text-white mb-6">Se Connecter</h1>
-    <form method="get" action="{{ path('api_login') }}" class="mb-6">
+    <form method="post" action="{{ path('api_login') }}" class="mb-6">
         <div class="flex items-center flex-col">
-            <input type="text" name="email" placeholder="Email..." value="{{ criteria['title']}}" 
+            <input type="text" name="email" placeholder="Email..." value=""
             class="w-full p-2 rounded-l-lg border border-gray-700 bg-gray-900 text-white"/>
-            <select name="genre" class="p-2 rounded-r-lg border border-gray-700 bg-gray-900 text-white">
-                <option value="">Tous les genres</option>
-                {% for genre in genres %}
-                    <option value="{{ genre }}" {% if genre == criteria['genre'] %}selected{% endif %}>{{ genre }}</option>
-                {% endfor %}
-            </select>
+            <input type="text" name="password" placeholder="Email..." value=""
+            class="w-full p-2 rounded-l-lg border border-gray-700 bg-gray-900 text-white"/>
             <button type="submit" class="ml-2 p-2 bg-blue-500 hover:bg-blue-400 text-white rounded-lg">Se Connecter</button>
         </div>
     </form>
