--- a/Symfony/templates/artists.html.twig
+++ b/Symfony/templates/artists.html.twig
@@ -21,7 +21,7 @@
     <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
         {% for artist in artists %}
             {% if (criteria['style'] in artist.style) %}
-                <div class="bg-gray-700 p-5 rounded-lg shadow-lg scale-50 text-white">
+                <div class="bg-gray-700 p-5 rounded-lg shadow-lg text-white">
                     <h2 class="text-2xl font-semibold mb-2">{{ artist.name }}</h2>
                     <p class="text-gray-400">{{ artist.style }}</p>
                     <a href="{{ path('artist_detail', {'artistId': artist.id}) }}" class="text-blue-500 hover:text-blue-300 mt-3 inline-block">See Details</a>
